Use ClientWait as default WebVR render path

Change the default webxr-render-path back to the fallback ClientWait.

BUG=760389

Change-Id: I35bf1d02a57dbd046becf4dc54a5a64279a46ba8